2003-06-16  Ken Raeburn  <raeburn@mit.edu>

	* ftp.c (recvrequest): Add new argument indicating whether "-" and
	"|..." special treatment should be disabled.
	* ftp_var.h (recvrequest): Update declaration.
	* cmds.c (remglob, ls, mls): Pass 0 as the extra argument.
	(mget): Pass 1.
	(getit): Pass 1 iff only one filename was supplied.

2003-06-05  Sam Hartman  <hartmans@mit.edu>

	* pclose.c (mypopen): use fork not vfork

2003-01-09  Ken Raeburn  <raeburn@mit.edu>

	* ftp.c (hookup, initconn, dataconn): Use socklen_t when passing
	address to socket functions.

2002-11-08  Ken Raeburn  <raeburn@mit.edu>

	* main.c (makeargv): Report an error if parsed arguments won't fit
	in margv array.
	* ftp_var.h (line, argbuf): Extend to 500 bytes.

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-06-13  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in ($(OUTPRE)ftp.exe): Use ws2_32.lib instead of
	wsock32.lib.

2002-04-11  Sam Hartman  <hartmans@mit.edu>

	* radix.c : Initialize c and D to suppress warning; code was already correct

2002-04-10  Danilo Almeida  <dalmeida@mit.edu>

	* ftp.c: Include Winsock 2 instead of Winsock.
	* ftp_var.h: Include Winsock 2 headers.
	* secure.c: Include port-sockets.h on Win32.
	* main.c: Include mswsock.h (MS Winsock extensions) so that we get
	some socket options we need to convert sockets to "file
	descriptors" used in posix-like routines.  We now need to pull
	this in explictly now that we are using Winsock 2.

2002-04-04  Sam Hartman  <hartmans@mit.edu>

	* radix.c (decode;):  Patch from Mark Eichin for one char buffer overflow [635]
	

2002-03-05  Ken Raeburn  <raeburn@mit.edu>

	* cmds.c (unix): Define if BSD is defined.

2001-11-30  Tom Yu  <tlyu@mit.edu>

	* glob.c (execbrc): Fix some fencepost errors.  Don't copy
	uninitialized memory past the end of the pattern string.  Don't